kube/app/adguard/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-udp
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.222
  externalTrafficPolicy: Local
  ports:
  - name: dns
    port: 53
    protocol: UDP
  selector:
    app.kubernetes.io/name: adguard-home
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-tcp
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard
  labels:
    app.kubernetes.io/name: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.222
  externalTrafficPolicy: Local
  ports:
  - name: dns
    port: 53
    protocol: TCP
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: adguard-home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard-home
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - adguard.matthew-stratton.me
    secretName: adguard-tls
  rules:
  - host: adguard.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: adguard-home-tcp
            port:
              number: 3000
        path: /
        pathType: Prefix
